--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,51 +1,55 @@
 ---
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<meta name="generator" />
+		<meta name="description" content="Soy maquetador web, y me gustaria dar ese salto a frontend developer. Me interesan tecnologías como React, Vue o Astro. Busco un lugar ameno donde me permitan desempeñarme como frontend en React o Vue.">
+		<meta name="keywords" content="desarrollador, web, reactjs, nextjs, html, css, js, javascript, web developer, desarrollador web, maquetador, frontend, desarrollador frontend">
+		<title>Maquetador web - Mooenz</title>
 	</head>
-	<body>
+	<body class="relative bg-black/90 text-black dark:text-white">
+		<div
+		class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-neutral-100 dark:bg-neutral-950
+		bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(224,59,87,0.5),rgba(255,255,255,0.9))]
+		dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(224,59,87,0.3),rgba(255,255,255,0))]"
+	>
+	</div>
 		<slot />
 	</body>
 </html>
+
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  :root {
+    color-scheme: light dark;
+  }
+
+  html {
+    font-family: "Onest Variable", system-ui, sans-serif;
+    scroll-behavior: smooth;
+  }
+
+  body {
+    color: rgba(15, 15, 15, 0.9);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    overscroll-behavior: none;
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    html {
+      scroll-behavior: auto;
+    }
+  }
+
+  @media (prefers-color-scheme: dark) {
+    body {
+      color: rgba(255, 255, 255, 0.9);
+    }
+  }
 </style>
