--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Work  from '../components/icons/Work.astro';
 import LinkedinIcon  from '../components/icons/LinkedinIcon.astro';
 import GithubIcon  from '../components/icons/GithubIcon.astro';
 import XIcon  from '../components/icons/XIcon.astro';
+import DownloadIcon  from '../components/icons/DownloadIcon.astro';
 ---
 
 <Layout>
@@ -18,10 +19,10 @@ import XIcon  from '../components/icons/XIcon.astro';
 		<section class="relative heigth-100 flex items-center justify-center">
 			<div class="flex items-center flex-col">
 				<div class="rounded-full size-36 mb-6 flex items-center justify-center bg-[url('/bg-foto.svg')]">
-					<img class="rounded-full size-36" src="/jose-manuel-montaño-saenz.png" alt="Mooenz foto">
+					<img class="rounded-full size-36" src="/jose-manuel-montaño-saenz.png" alt="Mooenz foto" />
 				</div>
 				<h1 class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-extrabold flex flex-col items-end pb-2">
-					<a href="https://www.linkedin.com/in/mooenz/" target="_blank" rel="noopener noreferrer"><span class="flex text-xs font-medium px-2.5 py-0.5 rounded bg-[#f53b57] text-white">Disponible</span></a>Manuel Montaño</h1>
+					<a href="https://www.linkedin.com/in/mooenz/" target="_blank" rel="noopener noreferrer"><span class="flex text-xs font-medium px-2.5 py-0.5 rounded bg-[#f53b57] text-white">Disponible ahora</span></a>Manuel Montaño</h1>
 				<h2 class="text-gray-700 dark:text-white/80 font-semibold mb-16">Maquetador web</h2>
 
 				<div class="flex align-center justify-center gap-4 md:gap-7">
@@ -43,6 +44,18 @@ import XIcon  from '../components/icons/XIcon.astro';
 			<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-gray-900 dark:text-white/80">
 				<Person class="size-7" />
 				Sobre mí</h2>
+
+				<div class="flex gap-8">
+					<img src="/hello.gif" class="rounded-full size-20" alt="Gif say Hello" />
+
+					<p class="mb-9 text-base font-normal dark:text-white text-pretty">Maquetador web con 1 año de experiencia. Soy ingeniero de sistemas y me apasiona el frontend. En mis ratos libres estoy aprendiendo React y Vue. Vivo en ibagué, la ciudad musical de colombia.</p>
+				</div>
+				<div class="flex flex-col items-center">
+					<a class="text-white cursor-pointer flex hover:scale-110 border-2 border-[#f53b57] hover:border-white transition-transform items-center gap-2 max-w-fit px-4 py-2 font-semibold rounded-lg bg-[#f53b57]" download="" >
+						<DownloadIcon />
+						Descargar CV
+					</a>
+				</div>
 		</Section>
 
 		<!-- Experiencia -->
